# PSB

./: .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  CLAUDE.md  README.md
server/: .env.example  README.md  alembic.ini  pyproject.toml
server/app/: __init__.py  cli.py  config.py  db.py  dependencies.py  main.py  migration_check.py  models.py  security.py  text.py
server/app/capture/: __init__.py  notes.py  organizer.py
server/app/chat/: __init__.py  auto_recorded.py  citations.py  distill_store.py  distiller.py  prompts.py  service.py  store.py
server/app/dedup/: __init__.py  store.py  sweep.py
server/app/entities/: __init__.py  backfill.py  entity_browse.py  entity_dedup.py  entity_store.py  keep_store.py  merge.py  merge_core.py  merge_replay.py  merge_store.py  profile_refresh.py  profile_store.py  profiles.py  resolver.py  store.py
server/app/graph/: __init__.py  node_writer.py  renderer.py  service.py  store.py
server/app/identity/: __init__.py  prompts.py  service.py  store.py
server/app/inbox/: __init__.py  drain.py
server/app/indexing/: __init__.py  chunking.py  frontmatter.py  indexer.py  store.py
server/app/mcp/: __init__.py  render.py  server.py  text.py  tokens.py
server/app/oauth/: __init__.py  consent.py  errors.py  metadata.py  service.py  store.py
server/app/providers/: __init__.py  base.py  claude.py  claude_max.py  labels.py  openai_compatible.py  registry.py  status.py
server/app/routers/: __init__.py  activity.py  admin.py  agents.py  auth.py  capture.py  chat.py  health.py  media.py  meta.py  oauth.py  pipelines.py  review.py  search.py  settings.py
server/app/search/: __init__.py  service.py  store.py
server/app/services/: __init__.py  activity_feed.py  agent_runs.py  auth_service.py  backup_jobs.py  capture_pipeline.py  capture_removal.py  capture_store.py  git_repo.py  graph_health.py  job_runner.py  maybe_digest.py  media_backfill.py  media_derivation.py  media_store.py  model_routing.py  nl_time.py  node_delete.py  node_media_store.py  node_time_edit.py  object_store.py  occurred_enrichment.py  orphan_keep.py  pipeline.py  rate_limit.py  reindex.py  (+9 more)
server/migrations/: env.py  script.py.mako
server/scripts/: hash_password.py  smoke_db.py  smoke_reprocess.py
server/tests/: conftest.py  fakes.py  test_activity_feed.py  test_activity_router.py  test_admin_router.py  test_agents_router.py  test_auto_recorded.py  test_backup_jobs.py  test_capture_notes.py  test_capture_organizer.py  test_capture_pipeline.py  test_capture_removal.py  test_capture_router.py  test_capture_store.py  test_chat_citations.py  test_chat_distiller.py  test_chat_router.py  test_chat_service.py  test_chunking.py  test_cli.py  test_composite_draft.py  test_config_and_migration.py  test_dedup_sweep.py  test_entity_backfill.py  test_entity_browse.py  test_entity_dedup.py  test_entity_merge.py  test_entity_profiles.py  test_entity_resolver.py  test_frontmatter.py  test_git_repo.py  test_graph_health.py  test_graph_read_service.py  test_graph_renderer.py  test_graph_service.py  test_identity_capsule.py  test_inbox_drain.py  test_indexer.py  test_job_runner.py  test_maybe_digest.py  (+46 more)
(+142 files in other folders)
