[project]
name = "braindan-server"
version = "0.1.0"
description = "Personal Second Brain (Braindan) — FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    # IANA tz database for zoneinfo (vault-facing local-time formatting) on platforms
    # without a system tzdata (e.g. Windows dev). Deterministic across dev/CI/prod.
    "tzdata>=2024.1",
    # Migration-only dependency. MUST NOT be imported outside migrations/ (ADR-011).
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's `= Depends(...)` in argument defaults is the framework's intended idiom.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
